feat: some restructurizing; added DB base handling
